--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -1,8 +1,30 @@
 .logo {
     font-size: 34.375px;
     /* font-weight: 700; */
+    margin-bottom: 0;
+    margin-top: 0;
+    position: absolute;
 }
 
 .comercial {
     color: #FFB9AF;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding-left: 0;
+    position: absolute;
+    width: 570px;
+}
+
+.itemMenu {
+    font-family: Montserrat;
+    font-size: 24.527px;
+    font-weight: 500;
+    margin-bottom: 0;
+    margin-top: 0;
 }
