--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -28,3 +28,10 @@
     margin-bottom: 0;
     margin-top: 0;
 }
+
+.redesSociais {
+    align-items: center;
+    display: flex;
+    gap: 38px;
+    position: absolute;
+}
